# px4_sitl

./: CMakeLists.txt  README.md  package.xml  upgrade_gazebo.sh
launch/: empty_world.launch  gazebo_ui.launch  multi_mavros_px4_gazebo_sitl.launch  single_mavros_px4_gazebo_sitl.launch  single_vehicle_spawn_sdf.launch  single_visualize_xfly_mavros_px4_gazebo_sitl.launch
models/standard_vtol/: standard_vtol.sdf
worlds/: empty.world
